Added a dimension for if I didn't take the initial TP

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -3526,7 +3526,7 @@
     }
    ],
    "source": [
-    "# filter to where cum_position_count is 99\n",
+    "# filter to where cum_position_count is 277\n",
     "renko_full_data.loc[renko_full_data['cum_position_count'] == 277, ['high','open', 'close', 'low', 'entry_signal', 'stop_loss', 'first_TP_hit', 'first_TP_goal']]"
    ]
   },
@@ -3568,7 +3568,13 @@
     "                                                            (profit_df['exit_price'] - profit_df['entry_price'])*per_lot*(lot_size),\n",
     "                                                            np.where((profit_df['direction'].str.strip() == 'short') & (profit_df['first_TP_hit'] == 0),\n",
     "                                                                     (profit_df['entry_price'] - profit_df['exit_price'])*per_lot*(lot_size), np.nan))))\n",
-    "profit_df['primary_profit'] = np.where(profit_df['first_TP_hit'] == 1, brick_size*per_lot*(lot_size/2), 0)\n"
+    "profit_df['primary_profit'] = np.where(profit_df['first_TP_hit'] == 1, brick_size*per_lot*(lot_size/2), 0)\n",
+    "\n",
+    "# what if I didn't take the first TP?\n",
+    "profit_df['profit'] = np.where((profit_df['direction'].str.strip() == 'buy'),\n",
+    "                                            (profit_df['exit_price'] - profit_df['entry_price'])*per_lot*(lot_size), \n",
+    "                                            np.where((profit_df['direction'].str.strip() == 'short'),\n",
+    "                                                    (profit_df['entry_price'] - profit_df['exit_price'])*per_lot*(lot_size), np.nan))"
    ]
   },
   {
@@ -3893,9 +3899,21 @@
     }
    ],
    "source": [
-    "profit_df['nova_profit'] = profit_df['primary_profit'] + profit_df['secondary_profit'] + nova_commission + profit_df['swap_rate']\n",
-    "profit_df['msolutions_profit'] = profit_df['primary_profit'] + profit_df['secondary_profit'] + msolutions_commission + profit_df['swap_rate']\n",
+    "# With initial TP\n",
+    "profit_df['nova_profit_inp'] = profit_df['primary_profit'] + profit_df['secondary_profit'] + nova_commission + profit_df['swap_rate']\n",
+    "profit_df['msolutions_profit_inp'] = profit_df['primary_profit'] + profit_df['secondary_profit'] + msolutions_commission + profit_df['swap_rate']\n",
     "profit_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# no initial TP\n",
+    "profit_df['nova_profit'] = profit_df['profit'] + nova_commission + profit_df['swap_rate']\n",
+    "profit_df['msolutions_profit'] = profit_df['profit'] + msolutions_commission + profit_df['swap_rate']"
    ]
   },
   {
@@ -4076,7 +4094,8 @@
     "nova_min = profit_df_daily['nova_profit'].min()\n",
     "msolutions_min = profit_df_daily['msolutions_profit'].min()\n",
     "# find the days when nova_profit equals nova_min\n",
-    "profit_df_daily.loc[profit_df_daily['nova_profit'] == nova_min]"
+    "profit_df_daily.loc[profit_df_daily['nova_profit'] == nova_min]\n",
+    "# 2023-01-11\tnova: -4572.5\tmsolutions: -4912.5"
    ]
   },
   {
@@ -4340,6 +4359,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculate the win rate for nova\n",
+    "nova_win_rate = profit_df.loc[profit_df['nova_profit'] > 0].shape[0] / profit_df.shape[0]\n",
+    "nova_win_rate = profit_df.loc[profit_df['nova_profit_inp'] > 0].shape[0] / profit_df.shape[0]\n",
+    "# find the number of times that initial TP was hit and then the \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 161,
    "metadata": {},
    "outputs": [
@@ -4402,6 +4433,27 @@
     "ax.legend()\n",
     "# Show the plot\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot the distribution of profits on a monthly basis for nova and msolutions\n",
+    "fig, ax = plt.subplots()\n",
+    "profit_df_monthly['nova_profit'].plot(kind='bar', ax=ax, color='blue', label='Nova Profit')\n",
+    "profit_df_monthly['msolutions_profit'].plot(kind='bar', ax=ax, color='orange', label='MSolutions Profit')\n",
+    "ax.set_xlabel('Month')\n",
+    "ax.set_ylabel('Profit')\n",
+    "fig.suptitle('Nova vs MSolutions Monthly Profit')\n",
+    "# increase the size of the chart\n",
+    "fig.set_size_inches(18.5, 10.5)\n",
+    "# Add legend\n",
+    "ax.legend()\n",
+    "# Show the plot\n",
+    "plt.show()"
    ]
   }
  ],
