added daily profit histogram as a table

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -4474,6 +4474,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# show the bins and counts from histogram in a table\n",
+    "nova_profit_hist = np.histogram(profit_df_daily['nova_profit'], bins=52)\n",
+    "print(nova_profit_hist)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# export the profit_df to a csv\n",
     "# profit_df.to_csv('profit_df.csv')"
    ]
