added the histogram bins to a dataframe

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -3103,7 +3103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3150,7 +3150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3173,7 +3173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3470,7 +3470,7 @@
        "[2369 rows x 13 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3484,7 +3484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3495,14 +3495,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\WilliamFetzner\\AppData\\Local\\Temp\\ipykernel_13340\\2876058505.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\WilliamFetzner\\AppData\\Local\\Temp\\ipykernel_18052\\2876058505.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3583,7 +3583,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3611,7 +3611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3670,7 +3670,7 @@
        "2023-01-11                -4912.5  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3701,7 +3701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3734,7 +3734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -3820,7 +3820,7 @@
        "2023-09-24             812.499974  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3832,7 +3832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -3898,7 +3898,7 @@
        "2023-09-30                -5025.0  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3924,7 +3924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -4082,7 +4082,7 @@
        "2023-12-31           15487.500050  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4093,7 +4093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -4121,7 +4121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -4141,7 +4141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -4150,7 +4150,7 @@
        "6.2229875944910535"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4161,7 +4161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -4185,7 +4185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -4208,7 +4208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4219,7 +4219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -4251,7 +4251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -4300,7 +4300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -4351,7 +4351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -4374,7 +4374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -4401,7 +4401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -4443,7 +4443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -4470,13 +4470,366 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bin</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-5385.000000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-4863.942308</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-4342.884615</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-3821.826923</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-3300.769231</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-2779.711538</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>-2258.653846</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-1737.596154</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-1216.538462</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>-695.480769</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>-174.423077</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>346.634615</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>867.692308</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1388.750000</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1909.807692</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2430.865385</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2951.923077</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>3472.980769</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>3994.038462</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>4515.096154</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>5036.153846</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>5557.211538</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>6078.269231</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>6599.326923</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>7120.384615</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>7641.442308</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>8162.500000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>8683.557692</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>9204.615385</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>9725.673077</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>10246.730769</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>10767.788462</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>11288.846154</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>11809.903846</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>12330.961538</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>12852.019231</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>13373.076923</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>13894.134615</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>14415.192308</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>14936.250000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>15457.307692</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>15978.365385</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>16499.423077</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>17020.480769</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>17541.538462</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>18062.596154</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>18583.653846</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>19104.711538</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>19625.769231</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>20146.826923</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>20667.884615</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>21188.942308</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             bin  count\n",
+       "0   -5385.000000      1\n",
+       "1   -4863.942308      1\n",
+       "2   -4342.884615      3\n",
+       "3   -3821.826923      2\n",
+       "4   -3300.769231      5\n",
+       "5   -2779.711538      9\n",
+       "6   -2258.653846      6\n",
+       "7   -1737.596154     12\n",
+       "8   -1216.538462     20\n",
+       "9    -695.480769     36\n",
+       "10   -174.423077     79\n",
+       "11    346.634615     26\n",
+       "12    867.692308     14\n",
+       "13   1388.750000     20\n",
+       "14   1909.807692     16\n",
+       "15   2430.865385     20\n",
+       "16   2951.923077     13\n",
+       "17   3472.980769     16\n",
+       "18   3994.038462     10\n",
+       "19   4515.096154     10\n",
+       "20   5036.153846     11\n",
+       "21   5557.211538      5\n",
+       "22   6078.269231      6\n",
+       "23   6599.326923      6\n",
+       "24   7120.384615      2\n",
+       "25   7641.442308      2\n",
+       "26   8162.500000      2\n",
+       "27   8683.557692      1\n",
+       "28   9204.615385      1\n",
+       "29   9725.673077      1\n",
+       "30  10246.730769      1\n",
+       "31  10767.788462      0\n",
+       "32  11288.846154      2\n",
+       "33  11809.903846      0\n",
+       "34  12330.961538      0\n",
+       "35  12852.019231      0\n",
+       "36  13373.076923      1\n",
+       "37  13894.134615      0\n",
+       "38  14415.192308      1\n",
+       "39  14936.250000      0\n",
+       "40  15457.307692      1\n",
+       "41  15978.365385      0\n",
+       "42  16499.423077      0\n",
+       "43  17020.480769      0\n",
+       "44  17541.538462      0\n",
+       "45  18062.596154      0\n",
+       "46  18583.653846      0\n",
+       "47  19104.711538      0\n",
+       "48  19625.769231      0\n",
+       "49  20146.826923      0\n",
+       "50  20667.884615      0\n",
+       "51  21188.942308      1"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# show the bins and counts from histogram in a table\n",
     "nova_profit_hist = np.histogram(profit_df_daily['nova_profit'], bins=52)\n",
-    "print(nova_profit_hist)\n"
+    "# put this into a pandas dataframe\n",
+    "nova_profit_hist_df = pd.DataFrame({'bin': nova_profit_hist[1][:-1], 'count': nova_profit_hist[0]})\n",
+    "nova_profit_hist_df\n"
    ]
   },
   {
