--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -4834,6 +4834,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entry 8:30 Count:  58\n"
+     ]
+    }
+   ],
+   "source": [
+    "# how many entry times were within 5 minutes of 8:30 am\n",
+    "# separate the hours and minutes from the entry_time column\n",
+    "profit_df['entry_time'] = pd.to_datetime(profit_df['entry_time'])\n",
+    "profit_df['entry_hour'] = profit_df['entry_time'].dt.hour\n",
+    "profit_df['entry_minute'] = profit_df['entry_time'].dt.minute\n",
+    "\n",
+    "# if the entry_hour is 8 and the entry_minute is between 25 and 35 then add a column called 'entry_8_30' and set it to 1\n",
+    "profit_df['entry_8_30'] = np.where((profit_df['entry_hour'] == 8) & (profit_df['entry_minute'] >= 25) & (profit_df['entry_minute'] <= 35), 1, 0)\n",
+    "# find the sum of the entry_8_30 column\n",
+    "entry_8_30_count = profit_df['entry_8_30'].sum()\n",
+    "print('Entry 8:30 Count: ', entry_8_30_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
