added stop_loss as a new parameter

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -1524,6 +1524,9 @@
     "lot_size = 10\n",
     "per_lot = 100000\n",
     "\n",
+    "# stop loss\n",
+    "stop_loss = 0.000325*2\n",
+    "\n",
     "# Commissions\n",
     "nova_commission = lot_size * -3\n",
     "msolutions_commission = lot_size * -5\n",
@@ -2235,8 +2238,8 @@
     "\n",
     "\n",
     "# add a stop loss column that will be the entry price +/- the brick size for when the entry signal is 'entry + buy' or 'entry + short'\n",
-    "renko_full_data['stop_loss'] = np.where(renko_full_data['entry_signal'] == 'entry + buy', renko_full_data['open'] - brick_size,\n",
-    "                                        np.where(renko_full_data['entry_signal'] == 'entry + short', renko_full_data['open'] + brick_size, np.nan))"
+    "renko_full_data['stop_loss'] = np.where(renko_full_data['entry_signal'] == 'entry + buy', renko_full_data['open'] - stop_loss,\n",
+    "                                        np.where(renko_full_data['entry_signal'] == 'entry + short', renko_full_data['open'] + stop_loss, np.nan))"
    ]
   },
   {
