--- a/optimization_Impulse_PSAR_nb.ipynb
+++ b/optimization_Impulse_PSAR_nb.ipynb
@@ -68,24 +68,24 @@
     "# Renko variable\n",
     "initial_brick_size = 0.000325\n",
     "# create a list of possible brick sizes a max at 0.001 and min at 0.00001 and each step is 0.00001\n",
-    "brick_sizes = np.arange(0.00001, 0.00101, 0.00001)\n",
+    "brick_size_list = np.arange(0.00001, 0.00101, 0.00001)\n",
     "\n",
     "# psar variables\n",
     "start = 0.02\n",
     "increment = 0.02\n",
-    "increment_list = np.arange(0.001, 0.2, 0.0001)\n",
+    "increment_list = np.arange(0.001, 0.2001, 0.0001)\n",
     "maximum = 0.2\n",
-    "max_list = np.arange(0.01, 0.5, 0.001)\n",
+    "max_list = np.arange(0.01, 0.501, 0.001)\n",
     "\n",
     "# impulse variables\n",
     "lengthMA = 34\n",
     "ma_list = np.arange(10, 100, 1)\n",
     "lengthSignal = 9\n",
-    "signal_list = np.arange(1, 50, 1)\n",
+    "signal_list = np.arange(1, 51, 1)\n",
     "\n",
     "# Lot Size\n",
     "lot_size = 10\n",
-    "lot_sizes_list = np.arange(1, 20, 1)\n",
+    "lot_sizes_list = np.arange(1, 21, 1)\n",
     "per_lot = 100000\n",
     "\n",
     "# Commissions\n",
