--- a/optimization_Impulse_PSAR_nb.ipynb
+++ b/optimization_Impulse_PSAR_nb.ipynb
@@ -101,40 +101,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1.0e-05, 2.0e-05, 3.0e-05, 4.0e-05, 5.0e-05, 6.0e-05, 7.0e-05,\n",
-       "       8.0e-05, 9.0e-05, 1.0e-04, 1.1e-04, 1.2e-04, 1.3e-04, 1.4e-04,\n",
-       "       1.5e-04, 1.6e-04, 1.7e-04, 1.8e-04, 1.9e-04, 2.0e-04, 2.1e-04,\n",
-       "       2.2e-04, 2.3e-04, 2.4e-04, 2.5e-04, 2.6e-04, 2.7e-04, 2.8e-04,\n",
-       "       2.9e-04, 3.0e-04, 3.1e-04, 3.2e-04, 3.3e-04, 3.4e-04, 3.5e-04,\n",
-       "       3.6e-04, 3.7e-04, 3.8e-04, 3.9e-04, 4.0e-04, 4.1e-04, 4.2e-04,\n",
-       "       4.3e-04, 4.4e-04, 4.5e-04, 4.6e-04, 4.7e-04, 4.8e-04, 4.9e-04,\n",
-       "       5.0e-04, 5.1e-04, 5.2e-04, 5.3e-04, 5.4e-04, 5.5e-04, 5.6e-04,\n",
-       "       5.7e-04, 5.8e-04, 5.9e-04, 6.0e-04, 6.1e-04, 6.2e-04, 6.3e-04,\n",
-       "       6.4e-04, 6.5e-04, 6.6e-04, 6.7e-04, 6.8e-04, 6.9e-04, 7.0e-04,\n",
-       "       7.1e-04, 7.2e-04, 7.3e-04, 7.4e-04, 7.5e-04, 7.6e-04, 7.7e-04,\n",
-       "       7.8e-04, 7.9e-04, 8.0e-04, 8.1e-04, 8.2e-04, 8.3e-04, 8.4e-04,\n",
-       "       8.5e-04, 8.6e-04, 8.7e-04, 8.8e-04, 8.9e-04, 9.0e-04, 9.1e-04,\n",
-       "       9.2e-04, 9.3e-04, 9.4e-04, 9.5e-04, 9.6e-04, 9.7e-04, 9.8e-04,\n",
-       "       9.9e-04, 1.0e-03])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "brick_sizes"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -147,14 +113,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a renko chart from the df_2022 dataframe\n",
-    "r_full_2022 = Renko(df_2022, brick_size=brick_size)\n",
-    "# create a new dataframe from the renko features\n",
-    "renko_full_data_2022 = r_full_2022.renko_df()\n",
-    "# rename 'volume' to 'nbars'\n",
-    "renko_full_data_2022 = renko_full_data_2022.rename(columns={'volume': 'nbars'})\n",
-    "r_2022_w_psar = fx.psar_from_data(renko_full_data_2022)\n",
-    "r_2023_w_psar = fx.psar_from_data(renko_full_data_2023)"
+    "for brick_size in brick_size_list:# create a renko chart from the df_2022 dataframe\n",
+    "    r_full_2022 = Renko(df_2022, brick_size=brick_size)\n",
+    "    # create a new dataframe from the renko features\n",
+    "    renko_full_data_2022 = r_full_2022.renko_df()\n",
+    "    # rename 'volume' to 'nbars'\n",
+    "    renko_full_data_2022 = renko_full_data_2022.rename(columns={'volume': 'nbars'})\n",
+    "    r_2022_w_psar = fx.psar_from_data(renko_full_data_2022)"
    ]
   },
   {
