got much more reliable data from Metatrader 4 and reran the data which is looking much more accurate

--- a/optimization_Impulse_PSAR_nb.ipynb
+++ b/optimization_Impulse_PSAR_nb.ipynb
@@ -35,11 +35,9 @@
    ],
    "source": [
     "# collect the actual data from csv file\n",
-    "filename2023 = \"C:/Users/WilliamFetzner/Documents/Trading/DAT_XLSX_EURUSD_M1_2023.xlsx\"\n",
-    "filename2022 = \"C:/Users/WilliamFetzner/Documents/Trading/DAT_XLSX_EURUSD_M1_2022.xlsx\"\n",
-    "\n",
-    "df_2023 = pd.read_excel(filename2023, header=None, names=['datetime', 'open', 'high', 'low', 'close', 'volume'])\n",
-    "df_2022 = pd.read_excel(filename2022, header=None, names=['datetime', 'open', 'high', 'low', 'close', 'volume'])"
+    "filename = \"C:/Users/WilliamFetzner/Documents/Trading/EURUSD1.csv\"\n",
+    "df = pd.read_csv(filename, header=None, names=['date', 'time', 'open', 'high', 'low', 'close', 'volume'])\n",
+    "df.head(10)"
    ]
   },
   {
@@ -48,8 +46,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_2022 = fx.prep_data(df_2022)\n",
-    "df_2023 = fx.prep_data(df_2023)"
+    "# convert date to datetime\n",
+    "df['datetime'] = pd.to_datetime(df['date'] + ' ' + df['time'], format='%Y.%m.%d %H:%M')\n",
+    "# filter the data to just 2023\n",
+    "\n",
+    "df_2022 = fx.prep_data(df, 2022)\n",
+    "df_2023 = fx.prep_data(df, 2023)\n",
+    "df_2024 = fx.prep_data(df, 2024)"
    ]
   },
   {
