looked at removing nighttime hours

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -6278,25 +6278,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "340989.53246225754 436764.53246210545\n"
+      "447864.53246212745 436764.53246210545\n"
      ]
     }
    ],
    "source": [
     "# filter out any rows that have entry_hour as \n",
-    "low_win_perc_hrs = [0, 1, 17, 20, 23]\n",
+    "low_win_perc_hrs = [0, 22, 23]\n",
     "low_win_perc_removed = profit_df[~profit_df.entry_hour.isin(low_win_perc_hrs)]\n",
     "# find the sum of nova profit for low_win_perc_removed\n",
     "print(low_win_perc_removed['nova_profit'].sum(), profit_df['nova_profit'].sum())\n",
-    "# 559,290.0001748225 562,030.0001747878\n",
-    "# 566,945.0001748366 562,030.0001747878\n"
+    "# 450,269.5324621328 436,764.53246210545 (0,7,22,23)\n",
+    "# 447,864.53246212745 436,764.53246210545 - nighttime hours (0,22,23)\n"
    ]
   },
   {
