added the number of days of drawdown

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -4157,6 +4157,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "83 362 0.2292817679558011 $446,356.02\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find the number of times that profit_df_daily is below zero\n",
+    "profit_df_daily['nova_negative'] = np.where(profit_df_daily['nova_profit'] < 0, 1, 0)\n",
+    "# find the sum of nova_negative and msolutions_negative\n",
+    "nova_negative_sum = profit_df_daily['nova_negative'].sum()\n",
+    "total_days = len(profit_df_daily.index)\n",
+    "total_profit = profit_df['nova_profit'].sum()\n",
+    "print(nova_negative_sum, total_days, nova_negative_sum/total_days, '${:,.2f}'.format(total_profit))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
