added a spot for the max earned on one trade

--- a/Impulse_PSAR_nb.ipynb
+++ b/Impulse_PSAR_nb.ipynb
@@ -4690,6 +4690,11 @@
     "msolutions_min = profit_df['msolutions_profit'].min()\n",
     "print(f'Nova Min: ${nova_min}')\n",
     "print(f'MSolutions Min: ${msolutions_min}')\n",
+    "# find the max for nova_profit and msolutions_profit\n",
+    "nova_max = profit_df['nova_profit'].max()\n",
+    "msolutions_max = profit_df['msolutions_profit'].max()\n",
+    "print(f'Nova Max: ${nova_max}')\n",
+    "print(f'MSolutions Max: ${msolutions_max}')\n",
     "\n"
    ]
   },
